--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "express": "^4.16.2",
     "kerberos": "0.0.23",
     "mongodb": "^3.0.1",
-    "node-gyp": "^3.6.2",
-    "valid-url": "^1.0.9"
+    "node-gyp": "^3.6.2"
   },
   "devDependencies": {},
   "scripts": {
