--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.16.2",
     "kerberos": "0.0.23",
     "mongodb": "^3.0.1",
+    "node-fetch": "^1.7.3",
     "node-gyp": "^3.6.2"
   },
   "devDependencies": {},
@@ -33,31 +34,4 @@
     "jdub",
     "image search abstraction layer"
   ]
-}, {
-  "name": "image-search",
-  "version": "1.0.0",
-  "description": "FCC Backend Challenge: Image Search Abstraction Layer",
-  "main": "server.js",
-  "dependencies": {
-    "bson-ext": "^1.0.5",
-    "mongodb": "^3.0.1",
-    "node-gyp": "^3.6.2",
-    "kerberos": "^0.0.23"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "keywords": [
-    "fcc",
-    "freecodecamp",
-    "jDub",
-    "image",
-    "search",
-    "abstraction",
-    "layer"
-  ],
-  "author": "jDub",
-  "license": "ISC"
 }
